force-app/main/default/objects/Coaching__c/Coaching__c.object-meta.xml
<CustomObject>
    <label>Coaching</label>
    <nameField>
        <label>Nom</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Coachings</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>