force-app/main/default/objects/Coaching__c/fields/accompagnateur__c.field-meta.xml
<CustomField>
    <fullName>accompagnateur__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Accompagnateur</label>
    <referenceTo>User</referenceTo>
    <relationshipName>accompagnateurs</relationshipName>
    <type>Lookup</type>
</CustomField>