force-app/main/default/objects/Coaching__c/fields/accompagne__c.field-meta.xml
<CustomField>
    <fullName>accompagne__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Accompagné</label>
    <referenceTo>User</referenceTo>
    <relationshipName>accompagnes</relationshipName>
    <type>Lookup</type>
</CustomField>