force-app/main/default/objects/Coaching__c/fields/accordClient__c.field-meta.xml
<CustomField>
    <fullName>accordClient__c</fullName>
    <inlineHelpText>Obtient l&apos;accord du client pour poursuivre</inlineHelpText>
    <label>Obtient l&apos;accord pour poursuivre</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>