force-app/main/default/objects/Coaching__c/fields/argumentaire__c.field-meta.xml
<CustomField>
    <fullName>argumentaire__c</fullName>
    <inlineHelpText>Argumente en insistant sur les bénéfices pour le client</inlineHelpText>
    <label>Argumente en insistant sur les bénéfices</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>