force-app/main/default/objects/Coaching__c/fields/comentairesSatisfaction__c.field-meta.xml
<CustomField>
    <fullName>comentairesSatisfaction__c</fullName>
    <label>Comentaires (Satisfaction)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>