force-app/main/default/objects/Coaching__c/fields/commentairesAccordClient__c.field-meta.xml
<CustomField>
    <fullName>commentairesAccordClient__c</fullName>
    <label>Commentaires (Accord Client)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>