force-app/main/default/objects/Coaching__c/fields/commentairesBenefices__c.field-meta.xml
<CustomField>
    <fullName>commentairesBenefices__c</fullName>
    <label>Commentaires (Bénéfices)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>