force-app/main/default/objects/Coaching__c/fields/commentairesConditionsOffre__c.field-meta.xml
<CustomField>
    <fullName>commentairesConditionsOffre__c</fullName>
    <label>Commentaires (Conditions Offre)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>