force-app/main/default/objects/Coaching__c/fields/commentairesConsentement__c.field-meta.xml
<CustomField>
    <fullName>commentairesConsentement__c</fullName>
    <label>Commentaires (Consentement)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>