force-app/main/default/objects/Coaching__c/fields/commentairesContreArgumentaires__c.field-meta.xml
<CustomField>
    <fullName>commentairesContreArgumentaires__c</fullName>
    <label>Commentaires (Contre-argumentaires)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>