force-app/main/default/objects/Coaching__c/fields/commentairesConvaincant__c.field-meta.xml
<CustomField>
    <fullName>commentairesConvaincant__c</fullName>
    <label>Commentaires (Convaincant)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>