force-app/main/default/objects/Coaching__c/fields/commentairesDialogueClient__c.field-meta.xml
<CustomField>
    <fullName>commentairesDialogueClient__c</fullName>
    <label>Commentaires (Dialogue Client)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>