force-app/main/default/objects/Coaching__c/fields/commentairesDiscours__c.field-meta.xml
<CustomField>
    <fullName>commentairesDiscours__c</fullName>
    <label>Commentaires (Discours)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>