force-app/main/default/objects/Coaching__c/fields/commentairesEcoute__c.field-meta.xml
<CustomField>
    <fullName>commentairesEcoute__c</fullName>
    <label>Commentaires (Ecoute)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>