force-app/main/default/objects/Coaching__c/fields/commentairesInteretClient__c.field-meta.xml
<CustomField>
    <fullName>commentairesInteretClient__c</fullName>
    <label>Commentaires (Intérêt Client)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>