force-app/main/default/objects/Coaching__c/fields/commentairesMaitriseDiagnostic__c.field-meta.xml
<CustomField>
    <fullName>commentairesMaitriseDiagnostic__c</fullName>
    <label>Commentaires (Maitrise Diagnostic)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>