force-app/main/default/objects/Coaching__c/fields/commentairesMaitriseFinancement__c.field-meta.xml
<CustomField>
    <fullName>commentairesMaitriseFinancement__c</fullName>
    <label>Commentaires (Maitrise Financement)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>