force-app/main/default/objects/Coaching__c/fields/commentairesMaitriseRDV__c.field-meta.xml
<CustomField>
    <fullName>commentairesMaitriseRDV__c</fullName>
    <label>Commentaires (Maitrise RDV)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>