force-app/main/default/objects/Coaching__c/fields/commentairesObjections__c.field-meta.xml
<CustomField>
    <fullName>commentairesObjections__c</fullName>
    <label>Commentaires (Objections)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>