force-app/main/default/objects/Coaching__c/fields/commentairesPresentation__c.field-meta.xml
<CustomField>
    <fullName>commentairesPresentation__c</fullName>
    <label>Commentaires (Présentation)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>