force-app/main/default/objects/Coaching__c/fields/commentairesPresentationKParK__c.field-meta.xml
<CustomField>
    <fullName>commentairesPresentationKParK__c</fullName>
    <label>Commentaires (Présentation KParK)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>