force-app/main/default/objects/Coaching__c/fields/commentairesPriseCotes__c.field-meta.xml
<CustomField>
    <fullName>commentairesPriseCotes__c</fullName>
    <label>Commentaires (Prise de côtes)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>