force-app/main/default/objects/Coaching__c/fields/commentairesQuestion__c.field-meta.xml
<CustomField>
    <fullName>commentairesQuestion__c</fullName>
    <label>Commentaires (Question)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>