force-app/main/default/objects/Coaching__c/fields/commentairesRecommandation__c.field-meta.xml
<CustomField>
    <fullName>commentairesRecommandation__c</fullName>
    <label>Commentaires (Recommandation)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>