force-app/main/default/objects/Coaching__c/fields/commentairesRevueContrat__c.field-meta.xml
<CustomField>
    <fullName>commentairesRevueContrat__c</fullName>
    <label>Commentaires (Revue contrat)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>