force-app/main/default/objects/Coaching__c/fields/commentairesSolutionAdaptee__c.field-meta.xml
<CustomField>
    <fullName>commentairesSolutionAdaptee__c</fullName>
    <label>Commentaires (Solution Adaptée)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>