force-app/main/default/objects/Coaching__c/fields/commentairesSouriant__c.field-meta.xml
<CustomField>
    <fullName>commentairesSouriant__c</fullName>
    <label>Commentaires (Souriant)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>