force-app/main/default/objects/Coaching__c/fields/commentairesSupportChiffrage__c.field-meta.xml
<CustomField>
    <fullName>commentairesSupportChiffrage__c</fullName>
    <label>Commentaires (Support Chiffrage)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>