force-app/main/default/objects/Coaching__c/fields/conditionsOffre__c.field-meta.xml
<CustomField>
    <fullName>conditionsOffre__c</fullName>
    <inlineHelpText>Informe le client des conditions de l&apos;offre</inlineHelpText>
    <label>Informe des conditions de l&apos;offre</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>