force-app/main/default/objects/Coaching__c/fields/consentementExplicite__c.field-meta.xml
<CustomField>
    <fullName>consentementExplicite__c</fullName>
    <inlineHelpText>Obtient le consentement explicite du client sur l&apos;offre proposée</inlineHelpText>
    <label>Obtient le consentement explicite</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>