force-app/main/default/objects/Coaching__c/fields/contreArgumentaires__c.field-meta.xml
<CustomField>
    <fullName>contreArgumentaires__c</fullName>
    <inlineHelpText>Maîtrise les contre argumentaires concurrence</inlineHelpText>
    <label>Maîtrise les contre argumentaires</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>