force-app/main/default/objects/Coaching__c/fields/convaincant__c.field-meta.xml
<CustomField>
    <fullName>convaincant__c</fullName>
    <inlineHelpText>Est convaincant, sincère, impliqué et dynamique</inlineHelpText>
    <label>Est convaincant, sincère, ...</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>