force-app/main/default/objects/Coaching__c/fields/date__c.field-meta.xml
<CustomField>
    <fullName>date__c</fullName>
    <label>Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>