force-app/main/default/objects/Coaching__c/fields/dialogueClient__c.field-meta.xml
<CustomField>
    <fullName>dialogueClient__c</fullName>
    <inlineHelpText>Privilégie le dialogue avec le client, identifie les attentes du client</inlineHelpText>
    <label>Privilégie le dialogue avec le client</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>