force-app/main/default/objects/Coaching__c/fields/discoursNaturel__c.field-meta.xml
<CustomField>
    <fullName>discoursNaturel__c</fullName>
    <inlineHelpText>Le discours est naturel et fluide</inlineHelpText>
    <label>Le discours est naturel et fluide</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>