force-app/main/default/objects/Coaching__c/fields/ecoute__c.field-meta.xml
<CustomField>
    <fullName>ecoute__c</fullName>
    <inlineHelpText>Est à l&apos;écoute, disponible, reformule et prend en compte le style de son interlocuteur</inlineHelpText>
    <label>Est à l&apos;écoute, ...</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>