force-app/main/default/objects/Coaching__c/fields/interetClient__c.field-meta.xml
<CustomField>
    <fullName>interetClient__c</fullName>
    <inlineHelpText>Suscite l&apos;intérêt du client, utilise l&apos;accroche</inlineHelpText>
    <label>Suscite l&apos;intérêt du client</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>