force-app/main/default/objects/Coaching__c/fields/interrogeSatisfaction__c.field-meta.xml
<CustomField>
    <fullName>interrogeSatisfaction__c</fullName>
    <inlineHelpText>Interroge sur la satisfaction de l&apos;entretien/solution proposée</inlineHelpText>
    <label>Interroge sur la satisfaction</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>