force-app/main/default/objects/Coaching__c/fields/maitriseDiagnostic__c.field-meta.xml
<CustomField>
    <fullName>maitriseDiagnostic__c</fullName>
    <inlineHelpText>Maîtrise l’introduction au diagnostic</inlineHelpText>
    <label>Maîtrise l’introduction au diagnostic</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>