force-app/main/default/objects/Coaching__c/fields/maitriseRDV__c.field-meta.xml
<CustomField>
    <fullName>maitriseRDV__c</fullName>
    <inlineHelpText>Maîtrise le début d’entretien, la présentation, la mise en confiance et le déroulement du rendez-vous</inlineHelpText>
    <label>Maîtrise le rendez-vous</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>