force-app/main/default/objects/Coaching__c/fields/maitriseRecommandation__c.field-meta.xml
<CustomField>
    <fullName>maitriseRecommandation__c</fullName>
    <inlineHelpText>Maîtrise la recommandation et la prise de congé</inlineHelpText>
    <label>Maîtrise la recommandation, ...</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>