force-app/main/default/objects/Coaching__c/fields/maitriseSolutionsFinancement__c.field-meta.xml
<CustomField>
    <fullName>maitriseSolutionsFinancement__c</fullName>
    <inlineHelpText>Maîtrise les solutions de financement</inlineHelpText>
    <label>Maîtrise les solutions de financement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>