force-app/main/default/objects/Coaching__c/fields/plusDeQuestions__c.field-meta.xml
<CustomField>
    <fullName>plusDeQuestions__c</fullName>
    <inlineHelpText>S&apos;assure que le client n&apos;a plus d&apos;autres questions</inlineHelpText>
    <label>S&apos;assure qu&apos;il n&apos;y a plus de questions</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>