force-app/main/default/objects/Coaching__c/fields/presentation__c.field-meta.xml
<CustomField>
    <fullName>presentation__c</fullName>
    <inlineHelpText>Se présente</inlineHelpText>
    <label>Se présente</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>