force-app/main/default/objects/Coaching__c/fields/revueContrat__c.field-meta.xml
<CustomField>
    <fullName>revueContrat__c</fullName>
    <inlineHelpText>Fait la revue de contrat et résume les points d&apos;accord</inlineHelpText>
    <label>Fait la revue de contrat et résume</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>