force-app/main/default/objects/Coaching__c/fields/solutionAdaptee__c.field-meta.xml
<CustomField>
    <fullName>solutionAdaptee__c</fullName>
    <inlineHelpText>Propose une solution adaptée et maîtrise la phase de démo</inlineHelpText>
    <label>Propose une solution adaptée</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>