force-app/main/default/objects/Coaching__c/fields/souriant__c.field-meta.xml
<CustomField>
    <fullName>souriant__c</fullName>
    <inlineHelpText>Est souriant, chaleureux, agréable et courtois</inlineHelpText>
    <label>Est souriant, chaleureux, agréable, ...</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>