force-app/main/default/objects/Coaching__c/fields/traitementObjections__c.field-meta.xml
<CustomField>
    <fullName>traitementObjections__c</fullName>
    <inlineHelpText>Traite les objections de manière adaptée</inlineHelpText>
    <label>Traite les objections de manière adaptée</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>