force-app/main/default/objects/Coaching__c/recordTypes/Avant_Formation_K1.recordType-meta.xml
<RecordType>
    <fullName>Avant_Formation_K1</fullName>
    <active>true</active>
    <label>Avant Formation K1</label>
</RecordType>