force-app/main/default/objects/Coaching__c/recordTypes/Avant_Formation_K2.recordType-meta.xml
<RecordType>
    <fullName>Avant_Formation_K2</fullName>
    <active>true</active>
    <label>Avant Formation K2</label>
</RecordType>