force-app/main/default/objects/Coaching__c/recordTypes/Avant_Formation_K3.recordType-meta.xml
<RecordType>
    <fullName>Avant_Formation_K3</fullName>
    <active>true</active>
    <label>Avant Formation K3</label>
</RecordType>